<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointsOfInterestMapsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".PointsOfInterestMapsActivity" />

    <TextView
        android:id="@+id/pointOfInterest"
        android:layout_width="218dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="600dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/addToListButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/ic_add_circle_blue_24dp"
        android:onClick="onAddToListClicked"
        android:src="@drawable/ic_star_yellow_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="Add to Favorites"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addToListButton" />

    <TextView
        android:id="@+id/viewFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="636dp"
        android:text="View Favorites"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="600dp"
        android:background="@drawable/ic_star_yellow_24dp"
        android:onClick="onViewFavoritesClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>