...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <Button
        android:id="@+id/pointsOfInterestButton"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="8dp"
...
